--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "dev": "cross-env NODE_PATH=. nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Konstantina Blazhukova",
@@ -27,6 +28,7 @@
     "structure": "^2.0.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "nodemon": "^2.0.20",
     "sequelize-cli": "^6.5.2"
   }
